--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
     "vite-plugin-vue-devtools": "^7.0.18",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.6"
   }
