--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^24.0.0",
     "less": "^4.2.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
+    "postcss-modules": "^6.0.0",
+    "postcss-preset-env": "^9.5.14",
     "prettier": "^3.0.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.3",
