--- a/package.json
+++ b/package.json
@@ -9,46 +9,58 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "pinia": "^2.1.7",
-    "terser": "^5.30.3",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "axios": "^1.7.9",
+    "jsencrypt": "^3.3.2",
+    "pinia": "^2.3.0",
+    "terser": "^5.39.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node20": "^20.1.2",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.11.28",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.5",
-    "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "jsdom": "^24.0.0",
-    "less": "^4.2.0",
-    "npm-run-all2": "^6.1.2",
-    "postcss": "^8.4.38",
+    "@iconify-json/fluent": "^1.2.14",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^22.10.2",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/eslint-plugin": "1.1.20",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "jsdom": "^25.0.1",
+    "npm-run-all2": "^7.0.2",
     "postcss-import": "^16.1.0",
-    "postcss-modules": "^6.0.0",
-    "postcss-preset-env": "^9.5.14",
-    "prettier": "^3.0.3",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "~5.4.0",
-    "vite": "^5.1.6",
-    "vite-plugin-vue-devtools": "^7.0.18",
+    "postcss-preset-env": "^10.1.3",
+    "prettier": "^3.3.3",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
+    "scss": "^0.2.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.6.3",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-icons": "^22.0.0",
+    "unplugin-vue-components": "^28.0.0",
+    "vite": "^6.0.5",
+    "vite-plugin-vue-devtools": "^7.6.8",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.6"
+    "vitest": "^2.1.8",
+    "vue-tsc": "^2.1.10"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "vue-demi"
+    ]
   }
 }
